# api-blogwriting-python-gcr

./: .build-test  .build-trigger  .cache-buster  .coverage  .deploy-trigger  .dockerignore  .flake8  .gcloudignore  .gitignore  .permissions-fixed.md  .secrets-added.md  .test-compute-permissions.md  .test-compute-secret-permissions.md  .test-deployment.md  .trigger-test  ABSTRACTION_LAYER_GUIDE.md  ADD_CREDENTIALS_TO_STAGING_PROD.md  AI_ENDPOINTS_IMPLEMENTATION_SUMMARY.md  AI_ENDPOINTS_STATUS.md  AI_ENDPOINTS_TEST_RESULTS.md  AI_ENDPOINTS_TEST_RESULTS_LIVE.md  AI_ENDPOINTS_VERIFICATION.md  AI_ENHANCEMENT_PLAN.md  AI_FUNCTIONS_BUG_FIX.md  AI_FUNCTIONS_ENHANCED_LOGGING.md  AI_FUNCTIONS_TESTING_RESULTS.md  AI_GATEWAY_TEST_REPORT.md  AI_OPTIMIZATION_GUIDE.md  AI_OPTIMIZATION_INTEGRATION_SUMMARY.md  AI_OPTIMIZATION_SCORE_EXPLANATION.md  AI_PROVIDER_MANAGEMENT_GUIDE.md  AI_SEARCH_OPTIMIZATION_RECOMMENDATIONS.md  AI_SEARCH_VOLUME_40400_FIX.md  AI_SEARCH_VOLUME_ENDPOINT_CONFIRMED.md  AI_SEARCH_VOLUME_ENDPOINT_TEST_RESULTS.md  AI_SEARCH_VOLUME_ENDPOINT_UPDATE_SUMMARY.md  AI_SEARCH_VOLUME_INVESTIGATION.md  AI_SEARCH_VOLUME_SOLUTION.md  AI_TOPIC_SUGGESTIONS_FIX.md  AI_TOPIC_SUGGESTIONS_RESEARCH.md  (+528 more)
.cursor/: mcp.json
.github/: README.md
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy-develop.yml  deploy-multi-env.yml  deploy-production.yml  deploy-staging.yml  deploy.yml
docs/: api-contract.md  backend-frontend-alignment.md  index.html  keyword-api-inventory.md
examples/: abstraction_layer_usage.py  ai_enhanced_usage.py  basic_usage.py  dataforseo_usage.py  simple_abstraction_usage.py
examples/ui-examples/: README.md
frontend-starter/: README.md  firestore.rules  next.config.js  package.json  tailwind.config.ts
frontend-starter/components/: WorkflowCard.example.tsx  WorkflowCard.tsx
frontend-starter/lib/api/: client.ts  hooks.ts
frontend-starter/lib/firebase/: config.ts
frontend-starter/scripts/: generate-types.ts
litellm/: litellm-config-vercel.yaml  litellm-config.yaml
migrations/: 001_add_multi_cms_publishing.sql  002_add_publishing_targets.sql  ai_usage_tracking.sql
scripts/: README.md  add-cloudinary-secrets.sh  add-credentials-now.sh  add-dataforseo-secrets-noninteractive.sh  add-dataforseo-secrets.sh  add-google-places-secrets.sh  add-google-search-secrets.sh  add-image-cloud-tasks-secrets.sh  add-stability-ai-secrets.sh  auto-setup-google-custom-search.sh  bulk-add-gsc-service-account.sh  check-google-custom-search-status.sh  check-latest-logs.sh  create-google-custom-search-secrets.sh  create-project.sh  deploy-env.sh  deploy-litellm.sh  deploy-simple.sh  deploy.sh  get-and-setup-google-custom-search.sh  get-google-search-credentials.sh  local-test.sh  monitor-deployment.sh  recreate-cloud-tasks-queue.sh  seed_default_prompts_firestore.py  setup-ai-provider-secrets-noninteractive.sh  setup-ai-provider-secrets.sh  setup-cloud-tasks-queue.sh  setup-google-custom-search-secrets.sh  setup-google-knowledge-graph.sh  setup-google-search-console.sh  setup-google-search-quick.sh  setup-image-cloud-tasks-queue.sh  setup-multi-environments.sh  setup-secrets.sh  setup-stability-ai-secrets.sh  setup-with-gcloud-api-key.sh  update-cloudrun-secrets.sh  verify-google-custom-search-setup.sh  verify-openai-config.sh  (+1 more)
src/blog_writer_sdk/: __init__.py
src/blog_writer_sdk/ai/: __init__.py  ai_content_generator.py  anthropic_provider.py  azure_openai_provider.py  base_provider.py  blog_writer_abstraction.py  blog_writer_factory.py  consensus_generator.py  content_enhancement.py  content_strategies.py  dataforseo_content_provider.py  enhanced_prompts.py  litellm_router.py  multi_stage_pipeline.py  multimodal_provider.py  openai_provider.py
src/blog_writer_sdk/api/: admin_management.py  ai_provider_management.py  ai_settings.py  blog_streaming.py  content_analysis_routing.py  content_validation.py  field_enhancement.py  image_generation.py  image_prompt_generator.py  image_streaming.py  integration_management.py  keyword_streaming.py  prompt_management.py  publishing_management.py  user_management.py
src/blog_writer_sdk/batch/: __init__.py  batch_processor.py
src/blog_writer_sdk/cache/: __init__.py  (+1 more)
test-results-20251207_131440/: multi-phase-response.json  quick-generate-error.json
tests/: __init__.py  test_ai_content_generator.py  test_api.py  test_basic.py  test_batch_processor.py  test_blog_writer.py  test_dataforseo_integration.py  test_dataforseo_integration_simple.py  test_publishing_targets.py  test_seo_optimizer.py
(+89 files in other folders)
